--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-		<!-- Your code goes here-->
+  <!-- Your code goes here-->
+   <a href="mfs_exp7.html">Click here</a> for the Virtual lab on relationship between the concentration of a fluorophore and its fluorescence intensity: determination of unknown concentration of an analyte experiment
 
 	<!-- Add JS at the bottom of HTML file --> 
         <script src="./js/main.js"></script>
