addeddescriptor.json, images, libraries and simulation files

--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <!-- Your code goes here-->
-   <a href="mfs_exp7.html">Click here</a> for the Virtual lab on relationship between the concentration of a fluorophore and its fluorescence intensity: determination of unknown concentration of an analyte experiment
+      <p>Click <a href="mfs_exp7.html">here</a> for the Virtual lab on relationship between the concentration of a fluorophore and its fluorescence intensity: determination of unknown concentration of an analyte experiment</p>
 
 	<!-- Add JS at the bottom of HTML file --> 
         <script src="./js/main.js"></script>
