--- a/experiment/simulation/mfs_exp7.html
+++ b/experiment/simulation/mfs_exp7.html
@@ -21,7 +21,7 @@
     <!-- First row consists of title of the experiment and the reset button -->
     <div class= "row">
         <div class="col-sm-12">
-          <!-->  <h3>Relationship between the Concentration of a Fluorophore and its Fluorescence Intensity: Determination of Unknown Concentration of an Analyte</h3>--><br/>
+           <h3>Relationship between the Concentration of a Fluorophore and its Fluorescence Intensity: Determination of Unknown Concentration of an Analyte</h3><br/>
             <button id="reset_btn">Reset Experiment</button>
         </div>
     </div><br/>
@@ -33,7 +33,7 @@
         On clicking this button a box modal appears over the page n displays the instruction -->
             <img id="manual_button" src="common_images/manual_button.png" ><br/><br/>
             <div id="manual" style = "z-index:1200" class="modal">
-               <!-- Modal content -->
+               <!-- Modal content -->       
                 <div class="modal-content">
                     <div class="modal-header">
                         <span class="close">&times</span>
